
[TestOptionalProp/should_exclude_value_from_props_on_full_request - 1]
{
  "props": {},
  "component": "TestComponent",
  "url": "/users",
  "version": "1.0.0"
}
---

[TestOptionalProp/should_skip_value_computation_on_initial_page_load - 1]
{
  "props": {},
  "component": "TestComponent",
  "url": "/users",
  "version": "1.0.0"
}
---

[TestOptionalProp/should_compute_value_on_demand_when_prop_is_requested_by_client - 1]
{
  "props": {
    "expensive": "computed"
  },
  "component": "TestComponent",
  "url": "/users",
  "version": "1.0.0"
}
---

[TestOptionalProp/should_exclude_value_from_props_when_partial_request_does_not_whitelist_it - 1]
{
  "props": {},
  "component": "TestComponent",
  "url": "/users",
  "version": "1.0.0"
}
---

[TestOptionalProp/should_compute_multiple_props_in_parallel_when_prop_is_marked_concurrent - 1]
{
  "props": {
    "a": "val-a",
    "b": "val-b"
  },
  "component": "TestComponent",
  "url": "/users",
  "version": "1.0.0"
}
---

[TestOptionalProp/should_pass_through_nil_value_when_prop_returns_nil - 1]
{
  "props": {
    "nullable": null
  },
  "component": "TestComponent",
  "url": "/users",
  "version": "1.0.0"
}
---

[TestOptionalProp/should_pass_through_false_value_when_prop_returns_false - 1]
{
  "props": {
    "flag": false
  },
  "component": "TestComponent",
  "url": "/users",
  "version": "1.0.0"
}
---
